--- a/TensorFlow/5_Tensor_Flow_Android_Mobile_Mnist/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/TensorFlow/5_Tensor_Flow_Android_Mobile_Mnist/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.owl.simple_mnist_android.MainActivity">
+    tools:context="learning.machine.learn.avinash.simple_mnist_android.MainActivity">
 
     <ImageView
         android:id="@+id/image_view"
